feat: add mobile map and concierge app

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,9 @@ __pycache__/
 ENV/
 venv/
 .cache/
+
+node_modules/
+**/dist/
+lacosa-mobile/*.tsbuildinfo
+lacosa-mobile/vite.config.js
+lacosa-mobile/vite.config.d.ts
