--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,8 @@ LACOSA_VERSION=0.1.0
 LACOSA_API_PREFIX=/api
 
 # Networking & security
-LACOSA_CORS_ORIGINS=https://app.lacosa.example,https://admin.lacosa.example
+# Accept calls from the local Vite dev server plus production hosts.
+LACOSA_CORS_ORIGINS=http://localhost:5173,https://app.lacosa.example,https://admin.lacosa.example
 LACOSA_CORS_ALLOW_CREDENTIALS=false
 LACOSA_LOG_LEVEL=INFO
 
