Align frontend data mapping for screenshots

--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,7 @@ LACOSA_API_PREFIX=/api
 
 # Networking & security
 # Accept calls from the local Vite dev server plus production hosts.
-LACOSA_CORS_ORIGINS=http://localhost:5173,https://app.lacosa.example,https://admin.lacosa.example
+LACOSA_CORS_ORIGINS=["http://localhost:5173","http://127.0.0.1:5173","https://app.lacosa.example","https://admin.lacosa.example"]
 LACOSA_CORS_ALLOW_CREDENTIALS=false
 LACOSA_LOG_LEVEL=INFO
 
